sts-bistro-api.k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sts-bistro-api-api
  namespace: sts-bistro-api
spec:
  replicas: 1
  selector:
    matchLabels:
      name: sts-bistro-api
  template:
    metadata:
      labels:
        name: sts-bistro-api
    spec:
      restartPolicy: Always
      containers:
        - name: sts-bistro-api-php-fpm
          image: gcr.io/tech-stuff-304507/sts-bistro-api-php-fpm:v<VERSION>
          resources:
            requests:
              memory: "500Mi"
              cpu: "250m"
            limits:
              memory: "1000Mi"
              cpu: "500m"
        - name: sts-bistro-api-nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: sts-bistro-api-nginx-conf
              mountPath: /etc/nginx/conf.d
              readOnly: false
      volumes:
        - name: sts-bistro-api-nginx-conf
          configMap:
            name: sts-bistro-api-nginx-config
            items:
              - key: nginx-default.conf
                path: default.conf
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    cloud.google.com/backend-config: '{"default": "sts-bistro-api-health-check-config"}'
  name: sts-bistro-api-80
  namespace: sts-bistro-api
spec:
  selector:
    name: sts-bistro-api
  type: NodePort
  #  externalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 80
      targetPort: 80
      # nodePort: 32267  # jeżeli brak, to port zostaje dobrany automatycznie
      protocol: TCP
  sessionAffinity: None
status:
  loadBalancer: {}
