sts-bistro-api-ingress-staging.k8s.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sts-bistro-api-ingress
  namespace: sts-bistro-api
  annotations:
    # https://cloud.google.com/kubernetes-engine/docs/how-to/load-balance-ingress#summary_of_external_ingress_annotations
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "ip-sts-bistro-api"
    kubernetes.io/ingress.allow-http: "false"
    service.alpha.kubernetes.io/app-protocols: "HTTP"
spec:
  tls:
    - hosts:
        - sts-bistro-api.staging.sts.pl
      secretName: cloudflare-wildcard-sts-pl
  rules:
    - host: sts-bistro-api.staging.sts.pl
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: sts-bistro-api-80
                port:
                  number: 80
